@@ -2,6 +2,8 @@ Gaim: The Pimpin' Penguin IM Clone that's good for the soul!
 
 version 0.72
 	* Added a search feature to conversations.
+	* Added an option to remove the formatting toolbar, both globally and
+	  on a per-window basis (Nathan Fredrickson)
 	* Fixed a crash in the Add Chat dialog when selecting an
 	  account that doesn't support chats. Closes bug #821606.
 	* Fixed a bug where new MSN accounts without buddies added wouldn't
